- Improved: Don't assume port 8123 during Home Assistant setup (#413)
- Improved: Add new card to login form which contains info about port (#413)
- Improved: Set focus mode to continuous in ZXing barcode scanner (works better)
- Improved: Tap to toggle torch on login page with QR code scanner
- Improved: Theme can be set to light/dark only or follow system (#423)
- Improved: Cursor behavior on login form
- Improved: Updated translations
- Fixed: Barcode scanner didn't start again after error in quick mode
- Fixed: Search field didn't appear after going back to stock or shopping list (#421)
- Fixed: Invisible date picker in light theme (#422)
- Fixed: Product dropdown appears again after scanning barcode (#404)
- Fixed: White icons on white navigation bar with SDK 26 (#366)
- Fixed: Shopping mode list scrolled to bottom after top category was done (#439)
- Fixed: Clipped text in changelog

2.0.0-beta02
- New: Almost all stock settings are now available (#395)
- Improved: Cleaner debugging settings page
- Improved: On consume page stock amount is used if barcode amount is bigger than stock (#357)
- Improved: Backup by Android system now is supported
- Improved: Updated translations
- Improved: All open-source licenses listed in about section
- Fixed: Crash on startup with some servers (#407)
- Fixed: Pressing 'done' on keyboard in amount field always started quick mode (#410)
- Fixed: Shopping list always displayed stock quantity unit and amount (#419)
- Fixed: Shopping list purchased wrong amount if item had not stock unit selected (#416)

2.0.0-beta01
- New: 'Purchase' actions on shopping list page are working again (#401)
- New: It is now possible to purchase only done shopping list items (#221)
- New: 'Add to shopping list' action on stock overview page is working again
- New: Quantity unit page now has field for plural forms if necessary (#348)
- Improved: 'Add shopping list item' page now has a better workflow