@@ -7,6 +7,7 @@
 - Improved: Set focus mode to continuous in ZXing barcode scanner (works better)
 - Improved: Tap to toggle torch on login page with QR code scanner
 - Improved: Theme can be set to light/dark only or follow system (#423)
+- Improved: Consume page shows info about current stock amount (#440)
 - Improved: Cursor behavior on login form
 - Improved: Updated translations
 - Fixed: Barcode scanner didn't start again after error in quick mode
